set up initial responsive 12-column grid css for layout building

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <html lang='en'>
     <head>
         <title>GIF COLLAGE</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="lib/styles/main.min.css">
     </head>
     <body>
-      <nav></nav>
+      <nav>
+        <div class="row">
+          <div class="col-3 col-m-2"></div>
+          <div class="col-9 col-m-10 content"></div>
+        </div>
+      </nav>
       <aside></aside>
       <main>
-        <div class="content"></div>
+        <!-- <div class="content"></div> -->
       </main>
         <script src="lib/js/main.min.js"></script>
     </body>
