added clear and "more" buttons to get basic functions down before styling

--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 
     <aside>
         <div class="row">
-            <div class="col-12 col-m-12 flex-container">
-                <form class="search-form" autocomplete="off">
+            <div class="col-12 col-m-12 flex-container search-form">
+                <form autocomplete="off">
                     <input class="search-field" type="text" name="search-terms" placeholder="">
-                    <button class="search-button paper-raise" type="submit">SEARCH</button>
+                    <button class="search-button" type="submit">SEARCH</button>
                 </form>
             </div>
+          <div class="row">
+            <div class="col-12 col-m-12 more-options">
+            <button class="clear-button" type="submit">CLEAR</button>
+            <button class="more-button" type="submit">MORE</button>
+          </div>
+          </div>
         </div>
     </aside <main>
     <div class="row">
