gif content page now generated by handlebars template

--- a/index.html
+++ b/index.html
@@ -25,19 +25,36 @@
           </div>
           </div>
         </div>
-    </aside <main>
-    <div class="row">
-        <!-- <div class="col-1 col-m-1"></div> -->
-        <div class="col-12 col-m-12 content flex-container"></div>
-        <!-- <div class="col-1 col-m-1"></div> -->
-    </div>
+    </aside>
+
+    <main>
+
+      <!-- <div class="row">
+          <div class="col-12 col-m-12 content flex-container"></div>
+      </div> -->
+
     </main>
+
+    <script id="gifContentPage" type="text/x-handlebars-template">
+      <div class="row 1">
+          <div class="col-12 col-m-12 content flex-container"></div>
+      </div>
+      <div class="row 2">
+        <p>{{test}}</p>
+      </div>
+    </script>
 
     <script id="gif" type="text/x-handlebars-template">
         <div class="gif-container flex-item">
             <a class="delete_button"><i class="fa fa-times" aria-hidden="true"></i></a>
             <img src="{{gif_url}}">
         </div>
+    </script>
+
+    <script id="landing" type="text/x-handlebars-template">
+      <div class="row 1">
+        <p>LANDING PAGE TEST</p>
+      </row>
     </script>
 
 
