--- a/index.html
+++ b/index.html
@@ -9,36 +9,47 @@
 </head>
 
 <body>
-    <nav>
-        <div class="navMenu col-12 col-m-12">
-            <!-- <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">TRENDING</a></li>
-                <li><a href="#">ABOUT</a></li>
-            </ul> -->
-            <div class="navDiv home"><a href="#">HOME</a></div>
-<div class="navDiv trending"><a href="#">TRENDING</a></div>
-<div class="navDiv about"><a href="#">ABOUT</a></div>
 
+<!--- ** NAVIGATION BAR ** ------>
+<!------------------------------->
 
+<section class="navigation">
+      <!-- <div class="navIcon"><a href="#">&#xf0c9;</a></div> -->
+
+      <div class="navMenu col-2 col-m-1">
+          <div class="navIcon"><a href="#">&#xf0c9;</a></div>
+          <div class="pull-down-options">
+          <div class="navDiv home"><a href="#">HOME</a></div>
+          <div class="navDiv trending"><a href="#">TRENDING</a></div>
+          <div class="navDiv about"><a href="#">ABOUT</a></div>
         </div>
-<div class="navIcon col-12 col-m-12"><a href="#">&#xf0c9;</a></div>
+      </div>
 
-    </nav>
-
-
-    <aside>
-        <div class="col-12 col-m-12 search-form flex-container">
+      <div class="search-form col-10 col-m-11">
             <form autocomplete="off">
                 <input class="search-field" type="text" name="search-terms" placeholder="">
                 <button class="search-button" type="submit">SEARCH</button>
             </form>
-        </div>
-        <div class="searchIcon"><a href="#">&#xf002;</a></div>
-    </aside>
+      </div>
 
-    <main>
-    </main>
+        <!-- <div class="searchIcon"><a href="#">&#xf002;</a></div> -->
+</section>
+
+
+<!--- ** MAIN CONTENT ** ------>
+<!------------------------------->
+
+  <main>
+  </main>
+
+
+
+
+
+
+  <!--- ** HANDLEBARS TEMPLATE SCRIPTS BELOW HERE ** ------>
+  <!--- ***********************************------->
+
 
     <script id="gifContentPage" type="text/x-handlebars-template">
         <div class="col-12 col-m-12 content flex-container"></div>
@@ -60,6 +71,7 @@
 
     <script id="landing" type="text/x-handlebars-template">
         <div class="col-12 col-m-12 landing-container">
+          <h1>WELCOME TO THE HOME PAGE PLACEHOLDER!</h1>
             <button class="start-button" type="submit">GET STARTED</button>
         </div>
     </script>
@@ -81,10 +93,11 @@
     </script>
 
 
+    <!--- ** JAVASCRIPT BELOW HERE ** ------>
+    <!--- ***********************************------->
 
     <script src="lib/js/vendor.min.js"></script>
     <script src="lib/js/main.js"></script>
-</body>
 
 </body>
 
