--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <script id="landing" type="text/x-handlebars-template">
         <div class="col-12 col-m-12 landing-container">
-          <h1>WELCOME TO THE HOME PAGE PLACEHOLDER!</h1>
+          <h1>WELCOME TO THE UGLY HOME PAGE LANDING PLACEHOLDER!</h1>
             <button class="start-button" type="submit">GET STARTED</button>
         </div>
     </script>
