--- a/index.html
+++ b/index.html
@@ -2,103 +2,58 @@
 
 <html lang='en'>
 
-<head>
-    <title>GIF COLLAGE</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="lib/styles/main.min.css">
-</head>
+    <head>
+        <title>gif collage</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="lib/styles/main.min.css">
+    </head>
 
-<body>
+    <body>
 
-<!--- ** NAVIGATION BAR ** ------>
-<!------------------------------->
-
-<section class="navigation">
-      <!-- <div class="navIcon"><a href="#">&#xf0c9;</a></div> -->
-
-      <div class="navMenu col-2 col-m-1">
-          <div class="navIcon"><a href="#">&#xf0c9;</a></div>
-          <div class="pull-down-options">
-          <div class="navDiv home"><a href="#">HOME</a></div>
-          <div class="navDiv trending"><a href="#">TRENDING</a></div>
-          <div class="navDiv about"><a href="#">ABOUT</a></div>
+        <!--- ** NAVIGATION BAR ** ------>
+        <div class="navigation">
+                <form class="search-form" autocomplete="off">
+                    <input class="search-field" type="text" name="search-terms" placeholder="">
+                    <button class="search-button" type="submit">search</button>
+                </form>
         </div>
-      </div>
 
-      <div class="search-form col-10 col-m-11">
-            <form autocomplete="off">
-                <input class="search-field" type="text" name="search-terms" placeholder="">
-                <button class="search-button" type="submit">SEARCH</button>
-            </form>
-      </div>
+        <!--- ** MAIN CONTENT ** ------>
+        <main></main>
 
-        <!-- <div class="searchIcon"><a href="#">&#xf002;</a></div> -->
-</section>
+        <div id="loading-container" class="loading hidden"><i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw loading-icon"></i></div>
 
-
-<!--- ** MAIN CONTENT ** ------>
-<!------------------------------->
-
-  <main>
-  </main>
-
-
-
-
-
-
-  <!--- ** HANDLEBARS TEMPLATE SCRIPTS BELOW HERE ** ------>
-  <!--- ***********************************------->
-
-
-    <script id="gifContentPage" type="text/x-handlebars-template">
-        <div class="col-12 col-m-12 content flex-container"></div>
-    </script>
-
-    <script id="gif" type="text/x-handlebars-template">
-        <div class="gif-container flex-item">
-            <a class="delete_button"><i class="fa fa-times" aria-hidden="true"></i></a>
-            <img src="{{gif_url}}">
-        </div>
-    </script>
-
-    <script id="more-gifs" type="text/x-handlebars-template">
-        <div class="more-button-container col-12 col-m-12">
-            <button class="more-button" type="submit">{{button_text}}</button>
-            <button class="clear-button" type="submit">CLEAR</button>
-        </div>
-    </script>
-
-    <script id="landing" type="text/x-handlebars-template">
-        <div class="col-12 col-m-12 landing-container">
-          <h1>WELCOME TO THE UGLY HOME PAGE LANDING PLACEHOLDER!</h1>
-            <button class="start-button" type="submit">GET STARTED</button>
-        </div>
-    </script>
-
-    <script id="about" type="text/x-handlebars-template">
-        <div class="about row 1">
-            <div class="col-8 col-m-9">
-                <p>Nowhere is it disputed that a friction of the methane is assumed to be a valiant bandana. The neons could be said to resemble clayey modems. Those milks are nothing more than grouses. What we don't know for sure is whether or not an uppish
-                    oyster without hardcovers is truly a bit of gory hots. Framed in a different way, we can assume that any instance of a lute can be construed as an inlaid industry. A textless japan's desk comes with it the thought that the netted broker
-                    is a violin. A hub is the wholesaler of a yellow. Authors often misinterpret the moat as a thumping planet, when in actuality it feels more like a leady chance.</p>
-
-                <p>Some assert that those virgos are nothing more than beetles. This is not to discredit the idea that a zoology is a basement's boundary. A gosling is a copper's baritone. Some assert that those exhausts are nothing more than forecasts.
-                    The prescribed viola reveals itself as a baleful fang to those who look. The lily is a closet. A father-in-law of the china is assumed to be a gamy example. The customer is a tuba.</p>
+        <!--- ** HANDLEBARS TEMPLATE SCRIPTS BELOW HERE ** ------>
+        <script id="gifContentPage" type="text/x-handlebars-template">
+            <div class="content flex-container">
             </div>
-            <div class="col-4 col-m-3">
-                <p>Some Filler Info About Us</p>
+        </script>
+        <script id="gif" type="text/x-handlebars-template">
+            <div class="gif-container flex-item">
+                <a class="delete_button">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </a>
+                <img src="{{gif_url}}">
             </div>
-        </div>
-    </script>
+        </script>
 
+        <script id="more-gifs" type="text/x-handlebars-template">
+            <div class="more-button-container">
+                <button class="more-button button" type="submit">{{button_text}}</button>
+                <button class="clear-button button" type="submit">clear</button>
+            </div>
+        </script>
 
-    <!--- ** JAVASCRIPT BELOW HERE ** ------>
-    <!--- ***********************************------->
+        <script id="landing" type="text/x-handlebars-template">
+            <div class="flex-container landing-container">
+                <h1 class="landing-title">search images and create your own GIF collage!</h1>
+            </div>
+        </script>
 
-    <script src="lib/js/vendor.min.js"></script>
-    <script src="lib/js/main.js"></script>
+        <!--- ** JAVASCRIPT BELOW HERE ** ------>
+        <script src="lib/js/vendor.js"></script>
+        <script src="lib/js/main.js"></script>
 
-</body>
+    </body>
 
 </html>
