added error message handling to javascript

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <!--- ** MAIN CONTENT ** ------>
         <main></main>
 
-        <div id="loading-container" class="loading hidden"><i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw loading-icon"></i></div>
+        <div id="loading-container" class="loading hidden">
+          <i id="load-icon" class="fa fa-circle-o-notch fa-spin fa-3x fa-fw loading-icon"></i>
+        </div>
 
         <!--- ** HANDLEBARS TEMPLATE SCRIPTS BELOW HERE ** ------>
         <script id="gifContentPage" type="text/x-handlebars-template">
@@ -46,7 +48,7 @@
 
         <script id="landing" type="text/x-handlebars-template">
             <div class="flex-container landing-container">
-                <h1 class="landing-title">search images and create your own GIF collage!</h1>
+                <h1 class="landing-title">search images to create a GIF collage</h1>
             </div>
         </script>
 
