sass refactor and landing page updates

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="delete_button">
                     <i class="fa fa-times" aria-hidden="true"></i>
                 </a>
-                <img src="{{gif_url}}">
+                <img class="searched-image" src="{{gif_url}}">
             </div>
         </script>
 
@@ -48,7 +48,25 @@
 
         <script id="landing" type="text/x-handlebars-template">
             <div class="flex-container landing-container">
-                <h1 class="landing-title">search images to create a GIF collage</h1>
+                <h1 class="landing-title">search images to create your own GIF collage</h1>
+                <div class="gif-container flex-item landing-item">
+                    <a class="delete_button">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </a>
+                    <img class="landing-image" src="/images/gahan.gif">
+                </div>
+                <div class="gif-container flex-item landing-item">
+                    <a class="delete_button">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </a>
+                    <img class="landing-image" src="/images/beyonce.gif">
+                </div>
+                <div class="gif-container flex-item landing-item">
+                    <a class="delete_button">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </a>
+                    <img class="landing-image" src="/images/doom.gif">
+                </div>
             </div>
         </script>
 
