--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         </script>
         <script id="gif" type="text/x-handlebars-template">
             <div class="gif-container flex-item">
-                <a class="delete_button">
+                <!-- <a class="delete_button">
                     <i class="fa fa-times" aria-hidden="true"></i>
-                </a>
+                </a> -->
+                  <a class="delete_button">&#x2715;</a>
                 <img class="searched-image" src="{{gif_url}}">
             </div>
         </script>
@@ -50,21 +51,15 @@
             <div class="flex-container landing-container">
                 <h1 class="landing-title">search images to create your own GIF collage</h1>
                 <div class="gif-container flex-item landing-item">
-                    <a class="delete_button">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </a>
+                    <a class="delete_button">&#x2715;</a>
                     <img class="landing-image" src="/images/gahan.gif">
                 </div>
                 <div class="gif-container flex-item landing-item">
-                    <a class="delete_button">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </a>
+                    <a class="delete_button">&#x2715;</a>
                     <img class="landing-image" src="/images/beyonce.gif">
                 </div>
                 <div class="gif-container flex-item landing-item">
-                    <a class="delete_button">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </a>
+                    <a class="delete_button">&#x2715;</a>
                     <img class="landing-image" src="/images/doom.gif">
                 </div>
             </div>
