file path url update

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                 <h1 class="landing-title">search images to create your own GIF collage</h1>
                 <div class="gif-container flex-item landing-item">
                     <a class="delete_button">&#x2715;</a>
-                    <img class="landing-image" src="images/gahan.gif">
+                    <img class="landing-image" src="./images/gahan.gif">
                 </div>
                 <div class="gif-container flex-item landing-item">
                     <a class="delete_button">&#x2715;</a>
-                    <img class="landing-image" src="images/beyonce.gif">
+                    <img class="landing-image" src="./images/beyonce.gif">
                 </div>
                 <div class="gif-container flex-item landing-item">
                     <a class="delete_button">&#x2715;</a>
-                    <img class="landing-image" src="images/doom.gif">
+                    <img class="landing-image" src="./images/doom.gif">
                 </div>
             </div>
         </script>
